[package]
name = "http-request"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stylist = { version = "0.12.0", features = ["yew", "parser"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = { version = "0.17.0", features = [] }
